--- a/solutions/exercise-12/i18n/messageBundle.properties
+++ b/solutions/exercise-12/i18n/messageBundle.properties
@@ -15,8 +15,10 @@ supplierAddressCountry=Country
 categoryInfo=Category Assignment
 categoryInfoID=ID
 categoryInfoName=Name
+categoryInfoDescription=Description
 iconTabFilterSupplier=Supplier
 iconTabFilterCategory=Category
+deleteDisabled=This Northwind service is read-only
 deleteButtonText=Delete
 deleteDialogTitle=Delete Product
 deleteDialogMsg=Do you want to delete this product now?
